<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarot Magique</string>
    <string name="bienvenue">Bienvenue, une petite partie ?</string>
    <string name="action_settings">Paramètres</string>
    <string name="buttonHeberger">Héberger</string>
    <string name="buttonRejoindrePartie">Rejoindre</string>
    <string name="derniereCartePiochee">Dernière carte piochée</string>
    <string name="buttonPiocher">Piocher</string>
    <string name="checkBoxExcuse">Excuse</string>
    <string name="textViewJoueur">Joueur</string>
    <string name="buttonListerAtouts">Regarder atouts</string>
    <string name="labelActivityTableJoueur">Table de jeu</string>
    <string name="labelActivityParametresConnexionPartie">Paramètres de connexion</string>
    <string name="labelActivityParametresHeberger">Paramètres de connexion</string>
    <string name="labelActivityRegarderAtouts">Vos atouts actuels</string>
    <string name="labelActivityHistorique">Cartes déjà tirées</string>
    <string name="editNomTable">Indiquer le nom de la partie</string>
    <string name="editNombreJoueurs">Indiquer nombre de joueurs</string>
    <string name="buttonJouer">Jouer</string>
    <string name="editTextIP">Indiquer IP hôte</string>
    <string name="textViewServerIP">Aucune adresse IP reconnue</string>
    <string name="textViewLabelServerIP">Votre addresse IP est</string>
    <string name="textViewClientMessage">Defaut</string>
    <string name="textViewServerPort">Pas de port</string>
    <string name="textViewServerMessage">Defaut2</string>
    <string name="buttonHistorique">Cartes déjà tirées</string>



</resources>