<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewLabelServerIP"
        android:id="@+id/textViewLabelServerIP"
        android:gravity="center"
        android:height="40dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewServerIP"
        android:id="@+id/textViewServerIP"
        android:gravity="center"
        android:height="40dp"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/editNomTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/editNomTable" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editNombreJoueurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/editNombreJoueurs"/>

    <Button
        android:id="@+id/buttonJouer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonJouer" />


</LinearLayout>
