<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonListerAtouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonListerAtouts" />


    <Button
        android:id="@+id/buttonPiocher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonPiocher" />

    <Button
        android:id="@+id/buttonHistorique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonHistorique" />
    
    


</LinearLayout>