<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tarotmagique.MainActivity" >

    <TextView
        android:id="@+id/textViewBienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/bienvenue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonHeberger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonRejoindrePartie"
        android:layout_alignRight="@+id/textViewBienvenue"
        android:layout_below="@+id/textViewBienvenue"
        android:layout_marginTop="32dp"
        android:text="@string/buttonHeberger" />

    <Button
        android:id="@+id/buttonRejoindrePartie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewBienvenue"
        android:layout_alignRight="@+id/textViewBienvenue"
        android:layout_below="@+id/buttonHeberger"
        android:layout_marginTop="24dp"
        android:text="@string/buttonRejoindrePartie" />

</RelativeLayout>